# DSI324-pdf-extraction

./: .gitignore  README.md  gemini_extract_course.py  gemini_extract_info.py  gemini_extract_professor.py  llama4_extract_course.py  merge_output.py  pyproject.toml  template.py  utils.py
data/1_pdf/คณะเศรษฐศาสตร์/: สำเนาของ 1.เศรษฐศาสตร์บัณฑิต (นานาชาติ) (ปรับปรุง 66).pdf.docx  สำเนาของ 2.เศษฐศาสตรบัณฑิต ปรังปรุง 66.docx
data/2_instruction/: courses.json  professors.json  section1.json  section2.json  section3.json  section4.json
data/3_output/basic_info/: สำเนาของ 08.08.66 หลักสูตร FIN 66 V.5.json  สำเนาของ 1-วท.บ.สถาปัตยกรรม2566-P.json  สำเนาของ 1.วท.บ.จิตวิทยา(ปรับปรุง66.).json  สำเนาของ 1.สม.บ.สังคมวิทยาและมานุษยวิทยา(ปรับปรุง66).json  สำเนาของ 1.เศรษฐศาสตร์บัณฑิต (นานาชาติ) (ปรับปรุง 66).json  สำเนาของ 2-สถาปัตยกรรมภายในบัณฑิต2566-P.json  สำเนาของ 2.ศิลปศาสตรบัณฑิต(ปรับปรุง66).json  สำเนาของ 2.สม.บ.การวิจัยทางสังคม(ปรับปรุง).json  สำเนาของ 2.เศษฐศาสตรบัณฑิต ปรังปรุง 66.json  สำเนาของ 3.ศศ.บ.ภาษาอังกฤษ (ปรับปรุง 66).json  สำเนาของ 4-ภูมิสถาปัตยกรรมบัณฑิต2566-P.json  สำเนาของ 4.ศศ.บ.ภาษาไทย (ปรับปรุง66).json  สำเนาของ 5.วท.บ.ภูมิศาสตร์และภูมิสารสนเทศ(ปรับปรุง66).json  สำเนาของ 6 ศศ.บ. สาขาวิชาสหวิทยาการ  รังสิต.json  สำเนาของ 6.ศศ.บ.อาณาบริเวณศึกษา(ปรับปรุง66).json  สำเนาของ 7.ศศ.บ.อังกฤษ-อเมริกันศึกษา(นานาชาติ-ปรับปรุง66).json  สำเนาของ 8.ศศ.บ.การสื่อสารเชิงธุรกิจ(ปรับปรุง66).json  สำเนาของ 9.ศศ.บ.การแปลและล่ามในยุคดิจิทัล(ใหม่66).json  สำเนาของ AM66 TQF2 Upadate 12-06-66 พร้อมเอกสารแนบ.json  สำเนาของ BScDBTM66-ฉบับอนุมัติสภามธ 25-4-66-edit.json  (+30 more)
(+142 files in other folders)
